--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@rjsf/core": "^6.0.0-beta.22",
-    "@rjsf/shadcn": "^6.0.0-beta.10",
-    "@rjsf/utils": "^5.24.13",
-    "@rjsf/validator-ajv8": "^5.24.13",
+    "@rjsf/core": "6.0.0-beta.22",
+    "@rjsf/shadcn": "6.0.0-beta.10",
+    "@rjsf/utils": "6.0.0-beta.22",
+    "@rjsf/validator-ajv8": "6.0.0-beta.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
