fix: upgrade @rjsf/shadcn to beta.22 to match other @rjsf packages
Resolves client-side exception caused by version mismatch between @rjsf packages.
All @rjsf packages now at 6.0.0-beta.22 for consistency.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@rjsf/core": "6.0.0-beta.22",
-    "@rjsf/shadcn": "6.0.0-beta.10",
+    "@rjsf/shadcn": "^6.0.0-beta.22",
     "@rjsf/utils": "6.0.0-beta.22",
     "@rjsf/validator-ajv8": "6.0.0-beta.22",
     "class-variance-authority": "^0.7.1",
