--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@rjsf/core": "6.0.0-beta.22",
     "@rjsf/shadcn": "^6.0.0-beta.22",
     "@rjsf/utils": "6.0.0-beta.22",
